Header navigation mobile fix

--- a/web/app/themes/gds/resources/styles/partials/header.scss
+++ b/web/app/themes/gds/resources/styles/partials/header.scss
@@ -55,11 +55,11 @@
 
     &__inner-container {
       grid-template:
-        "logo       toggler"
-        "navigation navigation"
-        "account  account";
-      grid-template-columns: auto auto;
-      grid-template-rows: auto 1fr auto auto;
+        "logo   account    toggler"
+        "navigation navigation navigation";
+      grid-template-columns: 1fr auto auto;
+      grid-template-rows: auto 1fr;
+      grid-column-gap: 16px;
       align-items: center;
       justify-content: space-between;
     }
@@ -73,7 +73,7 @@
     }
 
     &__logo img {
-      height: 28px;
+      height: 45px;
       width: auto;
     }
 
